[agi_av_import_export] add job.properties

--- a/agi_av_import_export/build.gradle
+++ b/agi_av_import_export/build.gradle
@@ -168,7 +168,7 @@ task importData(type: Ili2pgReplace) {
 
 // task deleteFtpFiles(type: FtpDelete) {
 //     onlyIf {
-//         gretlEnvironment == "production"
+//         gretlEnvironment == "XXXXXXX"
 //     }
 //     server = ftpServerInfogrips
 //     user = ftpUserInfogrips
