[agi_check_ili_export] add continueOnFailure to build.gradle

--- a/agi_check_ili_export/build.gradle
+++ b/agi_check_ili_export/build.gradle
@@ -12,6 +12,8 @@ buildscript {
 }
 */
 
+gradle.startParameter.continueOnFailure = true
+
 import ch.so.agi.gretl.tasks.*
 import ch.so.agi.gretl.api.TransferSet
 import ch.so.agi.gretl.api.Connector
