[agi_check_ili_export] test mustRunAfter #3

--- a/agi_check_ili_export/build.gradle
+++ b/agi_check_ili_export/build.gradle
@@ -30,7 +30,7 @@ subprojects {
 
 apply from: "$rootDir/datasets.groovy"
 
-defaultTasks 'exportAllData', 'zipLogFiles'
+defaultTasks 'exportAllData', 'uploadLogZipFileLatest'
 //defaultTasks 'exportAllData','fubar'
 
 //def pathToTempFolder = Files.createTempDirectory("agidataexport-").toFile().getAbsolutePath()
